Add missing annotations and small fixes